Moved js code out of the index.html

--- a/index.html
+++ b/index.html
@@ -62,87 +62,7 @@
     <script src="web/js/materialize.js"></script>
     <script src="web/js/mammoth.browser.js"></script>
     <script src="web/js/cheerio.js"></script>
-
-    <script>
-        doc = {nextWeek: {}}
-        days = ['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday'];
-
-        // Check for the various File API support.
-        if (window.File && window.FileReader && window.FileList && window.Blob) {} else {
-            alert('The File APIs are not fully supported in this browser.');
-        }
-
-        reader = new FileReader();
-        reader.onload = function () {
-            r = reader.result;
-             mammoth.convertToHtml({arrayBuffer: r}).then(function(result){
-                var html = result.value; // The generated HTML 
-                var messages = result.messages; // Any messages, such as warnings during conversion 
-                ch = cheerio.load(html);
-                doc.tip = ch('ul li').first().text();
-                
-                // Get data for this week
-                for (day in days) {
-                    doc[days[day]] = ch(':contains("'+days[day]+':")').first().next().children().map((i, el) => {
-                        return ch(el).text();
-                    }).get();
-                }
-
-                // Get data for next week
-                for (day in days) {
-                    doc.nextWeek[days[day]] = ch(':contains("'+days[day]+':")').eq(-2).next().children().map((i, el) => {
-                        return ch(el).text();
-                    }).get();
-                }
-                console.log(doc);
-
-                // ensure that the doc was read properly
-                for (day in days) { // todo merge these 3 loops together
-                    d = doc[days[day]]; nd = doc.nextWeek[days[day]];
-                    console.log(d);
-                    console.log(nd);
-                    if (d == undefined || d == '') {console.log('Parsing Failure'); return;}
-                    if (nd == undefined || nd == '') {console.log('Parsing Failure'); return;}
-                }
-                console.log('pre post');
-
-                // save the doc with todays date somewhere
-                $.post("https://h3x59il8tl.execute-api.us-west-2.amazonaws.com/prod/", doc).done(function (data) {
-                    console.log("We sent the thing to the people and got this back:");
-                    console.log(data);
-                });
-            }).done();
-        }
-
-        function handleFileSelect(evt) {
-            evt.stopPropagation();
-            evt.preventDefault();
-
-            var files = evt.dataTransfer.files; // FileList object.
-
-            // files is a FileList of File objects. List some properties.
-            var output = [];
-            for (var i = 0, f; f = files[i]; i++) {
-            output.push('<li><strong>', escape(f.name), '</strong> (', f.type || 'n/a', ') - ',
-                        f.size, ' bytes, last modified: ',
-                        f.lastModifiedDate ? f.lastModifiedDate.toLocaleDateString() : 'n/a',
-                        '</li>');
-            }
-            document.getElementById('list').innerHTML = '<ul>' + output.join('') + '</ul>';
-            reader.readAsArrayBuffer(files[0]);
-        }
-
-        function handleDragOver(evt) {
-            evt.stopPropagation();
-            evt.preventDefault();
-            evt.dataTransfer.dropEffect = 'copy'; // Explicitly show this is a copy.
-        }
-
-        // Setup the dnd listeners.
-        var dropZone = document.getElementById('drop_zone');
-        dropZone.addEventListener('dragover', handleDragOver, false);
-        dropZone.addEventListener('drop', handleFileSelect, false);
-    </script>
+    <script src="web/js/main.js"></script>
 </body>
 
 </html>
